--- a/devfiles/java-openliberty/devfile.yaml
+++ b/devfiles/java-openliberty/devfile.yaml
@@ -1,14 +1,15 @@
 schemaVersion: 2.0.0
 metadata:
   name: java-openliberty
-  version: 0.1.3
+  version: 0.1.4-rc1
   description: Java application stack using Open Liberty runtime
+  alpha.build-dockerfile: "https://raw.githubusercontent.com/OpenLiberty/application-stack/master/dev/Dockerfile"
+  alpha.deployment-manifest: "https://raw.githubusercontent.com/OpenLiberty/application-stack/master/dev/app-deploy.yaml"
 starterProjects:
   - name: user-app
     git:
       remotes:
-        origin: 'https://github.com/OpenLiberty/application-stack.git'
-      sparseCheckoutDir: /templates/default
+        origin: 'https://github.com/OpenLiberty/application-stack-starters.git'
 components:
   - name: devruntime
     container:
