--- a/devfiles/java-openliberty/Dockerfile
+++ b/devfiles/java-openliberty/Dockerfile
@@ -56,7 +56,7 @@ RUN if [ "$ADD_MP_HEALTH" = "true" ]; then \
         else \
             echo "Found mpHealth feature - not adding config snippet"; \
         fi; \
-        rm -f /logs/*; \
+        rm -rf /logs/*; \
     elif [ "$ADD_MP_HEALTH" != "false" ]; then \
         echo "Invalid ADD_MP_HEALTH value: $ADD_MP_HEALTH. Valid values are \"true\" | \"false\" "; \
     fi
