Add Java/Maven tags to java-openliberty
Signed-off-by: Scott Kurz <skurz@us.ibm.com>

--- a/devfiles/java-openliberty/devfile.yaml
+++ b/devfiles/java-openliberty/devfile.yaml
@@ -3,6 +3,7 @@ metadata:
   name: java-openliberty
   version: 0.4.0
   description: Java application stack using Open Liberty runtime
+  tags: ["Java", "Maven"]
   alpha.build-dockerfile: "https://github.com/OpenLiberty/application-stack/releases/download/outer-loop-0.4.0/Dockerfile"
   alpha.deployment-manifest: "https://github.com/OpenLiberty/application-stack/releases/download/outer-loop-0.4.0/app-deploy.yaml"
 starterProjects:
